--- a/src/main/resources/templates/RecruiterRegister.html
+++ b/src/main/resources/templates/RecruiterRegister.html
@@ -53,7 +53,7 @@
 
         <div class="form-group">
             <label>
-                <input type="password"
+                <input type="text"
                        class="form-input"
                        th:field="*{user.title}"
                        placeholder="Title"
@@ -62,7 +62,7 @@
         </div>
         <div class="form-group">
             <label>
-                <input type="password"
+                <input type="text"
                        class="form-input"
                        th:field="*{company.name}"
                        placeholder="Company's name">
